# bwx_sdk

./: .gitignore  CMakeLists.txt  README.md  init_lib_project.bat  init_lib_project.py  init_lib_project.sh  vcpkg.json
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  linux.yml  windows.yml
docs/doxygen/: custom_footer.html  custom_header.html  doxyfile
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_1d7ed9634ff83db4f7e4e61f673826ac.html  dir_1d7ed9634ff83db4f7e4e61f673826ac.js  dir_546f8e45fd111c796a30a11e2137fa95.html  dir_546f8e45fd111c796a30a11e2137fa95.js  dir_7682a43bf9128a39aefc8eedb9266f43.html  dir_7682a43bf9128a39aefc8eedb9266f43.js  dir_885cc87fac2d91e269af0a5a959fa5f6.html  dir_885cc87fac2d91e269af0a5a959fa5f6.js  dir_8cd30c39640728e0a4121d1cb3a0461f.html  dir_8cd30c39640728e0a4121d1cb3a0461f.js  dir_a21ea16101e9a2bae5913d7d98d89d12.html  dir_a21ea16101e9a2bae5913d7d98d89d12.js  dir_a2f904dbcd8bbca80e9d1ea06c5eac18.html  dir_a2f904dbcd8bbca80e9d1ea06c5eac18.js  dir_afc8bb2b938e2562e317c7188777fe5f.html  dir_afc8bb2b938e2562e317c7188777fe5f.js  doxygen_crawl.html  examples.html  examples.js  files.html  functions.html  functions_func.html  functions_type.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  (+1 more)
docs/html/d0/d9d/: bwx__utils_8h.html  bwx__utils_8h.js
docs/html/d1/d45/: classbwx__sdk_1_1bwx_property_vector-members.html
docs/html/d1/d76/: bwx__core_8cpp.html  bwx__core_8cpp.js
docs/html/d1/d96/: classbwx__sdk_1_1bwx_cmd_line_parser.html  classbwx__sdk_1_1bwx_cmd_line_parser.js
docs/html/d3/d2d/: bwx__math_8cpp.html  bwx__math_8cpp.js
docs/html/d3/d49/: bwx__cmd_8cpp.html
docs/html/d3/d8d/: classbwx__sdk_1_1bwx_property.html  classbwx__sdk_1_1bwx_property.js
docs/html/d4/d31/: classbwx__sdk_1_1bwx_property-members.html
docs/html/d4/d5d/: classbwx__sdk_1_1bwx_property_map-members.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  defines_0.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_9.js  functions_c.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js
docs/man/man3/: E__.3  E__C___.3  E__C___Projekty_.3  E__C___Projekty_Libs_.3  E__C___Projekty_Libs_bwx_sdk_.3  E__C___Projekty_Libs_bwx_sdk_src_.3  E__C___Projekty_Libs_bwx_sdk_src_bwx_core_.3  E__C___Projekty_Libs_bwx_sdk_src_bwx_utils_.3  bwx_cmd.cpp.3  bwx_cmd.h.3  bwx_core.cpp.3  bwx_core.h.3  bwx_internat.cpp.3  bwx_internat.h.3  bwx_math.cpp.3  bwx_math.h.3  bwx_oop.h.3  bwx_sdk.3  bwx_sdk_bwxCmdLineParser.3  bwx_sdk_bwxInternat.3  bwx_sdk_bwxLanguage.3  bwx_sdk_bwxProperty.3  bwx_sdk_bwxPropertyMap.3  bwx_sdk_bwxPropertyVector.3  bwx_string.cpp.3  bwx_string.h.3  bwx_utils.cpp.3  bwx_utils.h.3
examples/example_app/: CMakeLists.txt  main.cpp
examples/example_gl/: CMakeLists.txt  main.cpp
include/bwx_sdk/: bwx_globals.h
include/bwx_sdk/bwx_core/: bwx_cmd.h  bwx_config_utils.h  bwx_core.h  bwx_datetime.h  bwx_exception.h  bwx_exception_handler.h  bwx_internat.h  bwx_json.h  bwx_math.h  bwx_oop.h  bwx_string.h
include/bwx_sdk/bwx_gl/: bwx_gl.h  bwx_gl_armature.h  bwx_gl_buffer.h  bwx_gl_buffer_manager.h  bwx_gl_camera.h  bwx_gl_camera_component.h  bwx_gl_component.h  bwx_gl_control_component.h  bwx_gl_image_loader.h  bwx_gl_light.h  bwx_gl_light_component.h  bwx_gl_light_system.h  bwx_gl_material.h  bwx_gl_material_library.h  bwx_gl_material_manager.h  bwx_gl_mesh.h  bwx_gl_model.h  bwx_gl_movement.h  bwx_gl_movement_component.h  bwx_gl_node.h  bwx_gl_render_system.h  bwx_gl_renderable.h  bwx_gl_renderable_component.h  bwx_gl_renderer.h  bwx_gl_resource_manager.h  bwx_gl_scene.h  bwx_gl_scene_loader.h  bwx_gl_shader.h  bwx_gl_shader_generator.h  bwx_gl_shader_manager.h  bwx_gl_skybox.h  bwx_gl_texture.h  bwx_gl_texture_manager.h  bwx_gl_transform_component.h  bwx_gl_ttf.h  bwx_gl_utils.h
include/bwx_sdk/bwx_gui/: bwx_managed.h  bwx_reactive.h  bwx_reactive_dialog.h  bwx_sizer.h  bwx_text_document.h  bwx_text_editor.h  bwx_text_renderer.h
include/bwx_sdk/bwx_utils/: bwx_utils.h
locale/pl/: pl_PL.mo  pl_PL.po
scripts/: README.md  copy_headers.bat  copy_headers.py  generate_lib_cmake_file.py  install_dependencies_linux.sh  install_dependencies_macos.sh  make_my_src_beauty.py  remove_doxygen_comments.py
src/: bwx_globals.h
src/bwx_core/: CMakeLists.txt  bwx_cmd.cpp  bwx_cmd.h  bwx_config_utils.cpp  bwx_config_utils.h  bwx_core.cpp  bwx_core.h  bwx_datetime.cpp  bwx_datetime.h  bwx_exception.cpp  bwx_exception_handler.cpp  bwx_internat.cpp  bwx_internat.h  bwx_json.cpp  bwx_json.h  bwx_math.cpp  bwx_math.h  bwx_oop.h  bwx_string.cpp  bwx_string.h
src/bwx_gl/: CMakeLists.txt  bwx_gl.h  bwx_gl_armature.cpp  bwx_gl_armature.h  bwx_gl_buffer.cpp  bwx_gl_buffer.h  bwx_gl_buffer_manager.cpp  bwx_gl_buffer_manager.h  bwx_gl_camera.cpp  bwx_gl_camera.h  bwx_gl_camera_component.cpp  bwx_gl_camera_component.h  bwx_gl_component.cpp  bwx_gl_control_component.cpp  bwx_gl_control_component.h  bwx_gl_image_loader.cpp  bwx_gl_image_loader.h  bwx_gl_light.cpp  bwx_gl_light.h  bwx_gl_light_component.cpp  bwx_gl_light_system.cpp  bwx_gl_light_system.h  bwx_gl_material.cpp  bwx_gl_material.h  bwx_gl_material_library.cpp  bwx_gl_material_library.h  bwx_gl_material_manager.cpp  bwx_gl_mesh.cpp  bwx_gl_mesh.h  bwx_gl_model.cpp  bwx_gl_model.h  bwx_gl_movement.cpp  bwx_gl_movement.h  bwx_gl_movement_componenet.cpp  bwx_gl_movement_component.h  bwx_gl_node.cpp  bwx_gl_node.h  bwx_gl_render_system.cpp  bwx_gl_renderable.cpp  bwx_gl_renderable.h  (+28 more)
src/bwx_gui/: CMakeLists.txt  bwx_reactive.cpp  bwx_sizer.cpp  bwx_sizer.h  bwx_text_document.cpp  bwx_text_editor.cpp  bwx_text_renderer.cpp
src/bwx_utils/: CMakeLists.txt  bwx_utils.cpp  bwx_utils.h
(+32 files in other folders)
